# SDL-Pong

./: CMakeLists.txt  game.c  main.c
cmake_modules/: FindSDL2.cmake
inc/: game.h
